experiement_output/error_log/nondex-elypia-Commandler-Gradle-Plugin.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1357/wd/NonDex-plugin-test/github.com/elypia/Commandler-Gradle-Plugin/src/main/java/org/elypia/commandler/CommandlerdocTask.java:53: error: constructor Commandler in class Commandler cannot be applied to given types;
        Commandler commandler = new Commandler();
                                ^
  required: AppContext,Integration<?,?>
  found: no arguments
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1357/wd/NonDex-plugin-test/github.com/elypia/Commandler-Gradle-Plugin/src/main/java/org/elypia/commandler/CommandlerdocTask.java:54: error: incompatible types: AppContext cannot be converted to ActivatorConfig
        CommandlerDoc commandlerDoc = new CommandlerDoc(commandler.getAppContext());
                                                                                ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 30s
